--- a/app/globals.css
+++ b/app/globals.css
@@ -33,11 +33,11 @@ body {
 }
 
 .loader {
-
+  margin: auto;
   background: linear-gradient(90deg, #0001 33%, #0005 50%, #0001 66%) #f2f2f2;
   background-size: 300%;
   animation: loading 1s infinite linear;
-  border-radius: .5em;
+  border-radius: 0.5em;
 }
 @keyframes loading {
   0% {
@@ -45,9 +45,10 @@ body {
   }
 }
 
-
-.text__top{
-
+.text__container {
+  @apply mx-auto w-fit;
+}
+.text__top {
   width: 12em;
   margin: 1em 0 1em 0;
   height: 1em;
@@ -55,24 +56,18 @@ body {
   background: linear-gradient(90deg, #0001 33%, #0005 50%, #0001 66%) #f2f2f2;
   background-size: 300%;
   animation: loading 1s infinite linear;
-  border-radius: .2em;
-  
-
+  border-radius: 0.2em;
 }
-.text__bot{
-
+.text__bot {
   width: 10em;
-   margin: 1em 0 1em 0;
+  margin: 1em 0 1em 0;
   height: 1em;
   display: block;
   background: linear-gradient(90deg, #0001 33%, #0005 50%, #0001 66%) #f2f2f2;
   background-size: 300%;
   animation: loading 1s infinite linear;
-  border-radius: .2em;
-  
+  border-radius: 0.2em;
 }
-
-
 
 /* HTML: <div class="loader"></div> */
 
@@ -84,16 +79,12 @@ body {
   @apply bg-gray-500    rounded-full;
 }
 
-.main {
-  @apply container mx-auto;
-}
-
 .nav__container {
   @apply flex items-center max-sm:justify-between px-2 sm:justify-between container mx-auto py-6;
 }
 
 .nav__default {
-  @apply flex justify-center items-center gap-14 max-md:hidden max-sm:max-w-md   sm:max-w-sm md:max-w-md mx-auto;
+  @apply flex justify-center items-center gap-14 max-md:hidden max-sm:max-w-md sm:max-w-sm md:max-w-md mx-auto;
 }
 
 .mobile__nav {
@@ -104,22 +95,31 @@ body {
 }
 
 .search__container {
-  @apply bg-gray-200  h-12 p-2  rounded-md flex items-center gap-2;
+  @apply bg-gray-200  h-12 p-2   rounded-md flex items-center gap-2;
+}
+
+.search__container.active {
+  @apply min-[199px]:max-w-[299px] min-[550px]:max-w-[400px];
 }
 
 .search__box {
   @apply outline-none bg-transparent;
 }
 
+.search__box.active {
+  @apply w-full  min-[460px]:w-[200px] min-[549px]:w-[300px];
+}
+
 .carousel {
-  @apply overflow-hidden  flex justify-center flex-col   max-sm:max-w-sm sm:max-w-md md:max-w-4xl  mx-auto;
+  @apply flex justify-center flex-col overflow-hidden max-sm:max-w-sm sm:max-w-md md:max-w-4xl lg:max-w-6xl xl:max-w-7xl container  mx-auto;
 }
 .carousel__inner {
   @apply whitespace-nowrap transition-all;
 }
 .carousel__item {
-  @apply inline-flex max-sm:inline-block mt-12 items-center justify-center;
+  @apply inline-flex max-sm:inline-block items-center justify-center;
 }
+
 .carousel__container {
   @apply mx-2;
 }
@@ -131,7 +131,7 @@ body {
   @apply flex gap-4 py-4 justify-center;
 }
 .styled__radioBtn {
-  @apply bg-white border-2 border-black  flex gap-4   rounded-full w-3 h-3;
+  @apply bg-gray-300 flex gap-4 rounded-full w-3 h-3;
 }
 .indicator__symbol__active {
   @apply bg-blue-600 transition-all duration-500 border-blue-600;
@@ -141,7 +141,7 @@ body {
   @apply mx-auto;
 }
 .menu__bar__1 {
-  @apply bg-black w-7 block  h-[2px];
+  @apply bg-black w-7 block h-[2px];
 }
 .menu__bar__2 {
   @apply bg-black w-7 block h-[2px]  mt-2;
@@ -163,5 +163,5 @@ body {
 }
 
 .overview__section {
-  @apply flex max-lg:flex-col max-md:mt-4 py-14  max-lg:gap-20  flex-row max-sm:max-w-md   mx-auto items-center;
+  @apply flex max-lg:flex-col max-md:mt-4 py-14 container max-lg:gap-20 xl:gap-14  flex-row max-sm:max-w-md   mx-auto items-center;
 }
