--- a/app/component/pagination/pagination.css
+++ b/app/component/pagination/pagination.css
@@ -1,7 +1,3 @@
-.pagination-container {
-  @apply flex;
-}
-
 /* .pagination-item {
     padding: 0 12px;
     height: 32px;
@@ -19,8 +15,22 @@
   }
  */
 
+.pagination-container {
+  @apply flex;
+}
+
 .pagination-item {
-  @apply py-[.3rem] transition-all duration-200    text-center  text-gray-900  flex  justify-center  items-center  tracking-wider rounded-full text-sm min-w-[2rem];
+  @apply py-[.3rem] 
+  transition-all 
+  duration-200 
+  text-center 
+  text-gray-900  
+  flex  
+  justify-center  
+  items-center  
+  tracking-wider 
+  rounded-full 
+  text-sm min-w-[2rem];
 }
 
 .pagination-item.dots:hover {
@@ -33,7 +43,7 @@
 }
 
 .pagination-item.selected {
-  @apply bg-gray-200 
+  @apply bg-gray-200;
 }
 
 .pagination-item .arrow::before {
