--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,10 @@ body {
 
 /* Prevent body scrolling when navbar is open */
 
+.body{
+  @apply lg:mx-auto
+}
+
 ::-webkit-scrollbar {
   @apply w-[10px];
 }
